--- a/.env.example
+++ b/.env.example
@@ -1,19 +1,14 @@
-APP_NAME=Lumen
+APP_NAME=imagecrop
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=http://imagecrop
 APP_TIMEZONE=UTC
 
-LOG_CHANNEL=stack
-LOG_SLACK_WEBHOOK_URL=
+CACHE_DRIVER=redis
 
-DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
-DB_PORT=3306
-DB_DATABASE=homestead
-DB_USERNAME=homestead
-DB_PASSWORD=secret
+REDIS_HOST=127.0.0.1
+REDIS_PORT=6379
+REDIS_DATABASE=0
 
-CACHE_DRIVER=file
 QUEUE_CONNECTION=sync
