--- a/.env.example
+++ b/.env.example
@@ -11,4 +11,5 @@ REDIS_HOST=127.0.0.1
 REDIS_PORT=6379
 REDIS_DATABASE=0
 
-QUEUE_CONNECTION=sync
+APP_CACHE_STORE_TIME = 5
+APP_FILE_SIZE_LIMIT =  5
